Fix WITHOUT_SYMVER buildworld

XXX This could use some clean up.

PR:		207712
Differential Revision:	https://reviews.freebsd.org/D5572