lib/libc/sys/setcontext.c
@@ -38,9 +38,11 @@ __FBSDID("$FreeBSD$");
 #include "libc_private.h"
 
 __weak_reference(__sys_setcontext, __setcontext);
+#ifdef SYMVER_COMPAT
 __sym_compat(setcontext, __impl_setcontext, FBSD_1.0);
 __weak_reference(setcontext, __impl_setcontext);
 __sym_default(setcontext, setcontext, FBSD_1.2);
+#endif
 
 #pragma weak setcontext
 int
