lib/libc/sys/swapcontext.c
@@ -39,9 +39,11 @@ __FBSDID("$FreeBSD$");
 #include "libc_private.h"
 
 __weak_reference(__sys_swapcontext, __swapcontext);
+#ifdef SYMVER_COMPAT
 __sym_compat(swapcontext, __impl_swapcontext, FBSD_1.0);
 __weak_reference(swapcontext, __impl_swapcontext);
 __sym_default(swapcontext, swapcontext, FBSD_1.2);
+#endif
 
 #pragma weak swapcontext
 int
