lib/libthr/thread/thr_sem.c
@@ -43,6 +43,7 @@
 
 #include "thr_private.h"
 
+#ifdef SYMVER_COMPAT
 FB10_COMPAT(_sem_init_compat, sem_init);
 FB10_COMPAT(_sem_destroy_compat, sem_destroy);
 FB10_COMPAT(_sem_getvalue_compat, sem_getvalue);
@@ -50,6 +51,7 @@ FB10_COMPAT(_sem_trywait_compat, sem_trywait);
 FB10_COMPAT(_sem_wait_compat, sem_wait);
 FB10_COMPAT(_sem_timedwait_compat, sem_timedwait);
 FB10_COMPAT(_sem_post_compat, sem_post);
+#endif
 
 typedef struct sem *sem_t;
 
